--- a/tentangKami.html
+++ b/tentangKami.html
@@ -44,11 +44,18 @@
 
     <div class="konten">
       <h1>Tentang Kami</h1>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
+      <p>Baca komik dibangun sejak September 2019, dibuat dalam mengeluti bidang perkomikan di Indonesia yang profesional, bermutu dan berkompetensi tinggi melayani berbagai pihak.</p>
+
+      <br>
+      <p>tujuan dibuat web baca komik ini ialah untuk :</p>
+      <ol>
+        <li>menyediakan wadah bagi setiap orang yang ingin membuat komik untuk dapat ditayangkan dan dijual secara legal dan mudah.</li>
+        <li>menyediakan pelayanan untuk menjadi wadah pembacaan komik yang legal dan berkualitas.</li>
+        <li>meningkatkan konten perkomikan di Indonesia agar lebih baik lagi.</li>
+        <li>meningkatkan tingkat pendapatan para komikus di Indonesia.</li>
+      </ol>
+
+      <p>Visi Baca Komik adalah untuk meningkatkan tingkat kepuasan para pecinta komik di Indonesia terhadap karya -karya yang berjiwa ke Indonesiaan. Tingkat kepuasan ini berkaitan erat dengan kebahagiaannya sebagai individu.</p>
 
     </div>
     <!-- FOOTER -->
