update responsive detail

--- a/detail.html
+++ b/detail.html
@@ -40,7 +40,7 @@
             </ul>
         </nav>
 
-    <section> <!-- opo div enake  ? -->
+    <section class="ini-isi"> <!-- opo div enake  ? -->
         <div class="g">
             <img style="z-index: -10" src="img/banner sijuki keroyokan 3.jpg" alt="">   <!-- gambar cover banner komik -->
         </div>
@@ -53,7 +53,9 @@
                         </div>
                     </div>
                     <div class="a2">
-                        <h1>Si Juki</h1>    <!-- gawe judul komik dll -->
+                        <div class="dul">
+                            <p>Si Juki</p>   
+                        </div> <!-- gawe judul komik dll -->
                         <div class="par"><p>Yusuke Murata, ONE</p><!-- penulis -->
                             <p>Bersambung | 147 Episode</p><!-- ongoing --></div>
                         <a href="">Beli</a>
@@ -157,7 +159,7 @@
             </div>
         </div>
 
-
+        <div class="clear"></div>
     </section>
  <!-- FOOTER -->
  <div class="clear"></div>
