kasih slider pro wkwkwk

--- a/index.html
+++ b/index.html
@@ -109,8 +109,33 @@
                             </a>
                         </div>
                     </div>
-                    <div class="clear"></div>
+                    <div class="cover1">
+                        <div>
+                            <a href="detail.html">
+                                <img src="img/garudayana142.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Garudayana</p>
+                                    <p class="episode">Episode 19</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="cover1">
+                        <div>
+                            <a href="detail.html">
+                                <img src="img/dalang pelo142.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Dalang Pelo</p>
+                                    <p class="episode">Episode 17</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="kiri_panah" onclick="kiri_klik();"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+                <div class="kanan_panah" onclick="kanan_klik();"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+
                 <div class="clear"></div>
             </div>
 
@@ -197,7 +222,7 @@
                                         <p>11 menit yang lalu</p>
                                     </div>
                             </div>
-                    </div>   
+                    </div>
             </div>
         </div>
 
@@ -294,5 +319,6 @@
          }
         }
     </script>
+    <script src="js/slider.js"></script>
 </body>
 </html>
