--- a/index-masuk.html
+++ b/index-masuk.html
@@ -31,12 +31,15 @@
                     <li> <input class="respon" type="text" placeholder="Cari"> </li>
 
                     <ul id="dropdown"style="display:none">
-                      <li class="garis"><a style="color:black;d" href="">Rp. 1000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
-                      <li><a href="">komik</a></li> <br>
-                      <li><a class="abu"href="">koleksi komik</a></li> <br>
-                      <li class="garis"><a class="abu" onclick="tambahKomik();" >tambah komik</a></li> <br>
-                      <li class="garis"><a>profil</a></li> <br>
-                      <li><a style="color:rgba(255,0,0,0.5);"href="index.html">logout</a></li>
+                      <li ><a href="" class="biru">akun@gmail.com</a></li> <br>
+                      <li onclick="verif();"><a class="green kecil"href="javascript:void(0);">Belum terverifikasi</a></li> <br>
+                      <li class="garis" onclick="uang();"><a  href="javascript:void(0);">Rp. 1000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
+                      <li><a href="" style="color:black; cursor:default;">komik</a></li> <br>
+                      <li><a class="abu"href="komikSaya.html">komik saya</a></li> <br>
+                      <li><a class="abu"href="komikTerbeli.html">koleksi terbeli</a></li> <br>
+                      <li class="garis" onclick="tambahKomik();"><a href="javascript:void(0);" class="abu"  >tambah komik</a></li> <br>
+                      <li class="garis" onclick="profil();"><a href="javascript:void(0);">Edit Profil</a></li> <br>
+                      <li><a style="color:rgba(255,0,0,0.5);"href="index.html">Logout</a></li>
                     </ul>
             </div>
             <div class="clear"></div>
@@ -52,7 +55,8 @@
         </nav>
 
 <!-- modal box -->
-      <div class="bg-modal" id="modal" style="display:none;">
+<!-- untuk tambah komik -->
+      <div class="bg-modal" id="tambah" style="display:none;">
         <div class="modal-konten">
           <div class="tutup" onclick="tutup();">+</div>
           <h1>Tambah komik</h1>
@@ -63,13 +67,55 @@
             <input type="file" name="file" id="" > <br>
             <button type="button" name="button">TAMBAH</button>
           </form>
-
+        </div>
+      </div>
+<!-- untuk verifikasi -->
+      <div class="bg-modal" id="verif" style="display:none;">
+        <div class="modal-konten">
+          <div class="tutup" onclick="tutup();">+</div>
+          <h1>verifikasi identitas</h1>
+          <form class="" action="index.html" method="post">
+            <input type="text" name="" id="" placeholder="judul komik"><br>
+            <textarea name="message" style="width:300px; height:100px;" placeholder="deskripsi"></textarea><br>
+            <label for="file" style="padding-top:10px;">gambar cover</label> <br>
+            <input type="file" name="file" id="" > <br>
+            <button type="button" name="button">TAMBAH</button>
+          </form>
+        </div>
+      </div>
+<!-- untuk tambah uang -->
+      <div class="bg-modal" id="uang" style="display:none;">
+        <div class="modal-konten">
+          <div class="tutup" onclick="tutup();">+</div>
+          <h1>topup uang</h1>
+          <form class="" action="index.html" method="post">
+            <input type="text" name="" id="" placeholder="judul komik"><br>
+            <textarea name="message" style="width:300px; height:100px;" placeholder="deskripsi"></textarea><br>
+            <label for="file" style="padding-top:10px;">gambar cover</label> <br>
+            <input type="file" name="file" id="" > <br>
+            <button type="button" name="button">TAMBAH</button>
+          </form>
+        </div>
+      </div>
+<!-- untuk edit profil -->
+      <div class="bg-modal" id="profil" style="display:none;">
+        <div class="modal-konten">
+          <div class="tutup" onclick="tutup();">+</div>
+          <h1>edit profile</h1>
+          <form class="" action="index.html" method="post">
+            <input type="text" name="" id="" placeholder="judul komik"><br>
+            <textarea name="message" style="width:300px; height:100px;" placeholder="deskripsi"></textarea><br>
+            <label for="file" style="padding-top:10px;">gambar cover</label> <br>
+            <input type="file" name="file" id="" > <br>
+            <button type="button" name="button">TAMBAH</button>
+          </form>
         </div>
       </div>
 
 
+
 <!-- KONTEN -->
-<div class="konten">
+<div class="konten" onclick="closeDrop();">
         <div class="main-kiri">
             <div class="isi">
                 <div class="atas">
@@ -224,7 +270,7 @@
                                         <p>11 menit yang lalu</p>
                                     </div>
                             </div>
-                    </div>   
+                    </div>
             </div>
         </div>
 
@@ -320,21 +366,7 @@
            y.style.display = "none";
          }
         }
-      var z = document.getElementById("dropdown");
-      function drop() {
-           if (z.style.display === "none") {
-             z.style.display = "block";
-           } else {
-             z.style.display = "none";
-           }
-          }
-
-      function tambahKomik() {
-          document.getElementById("modal").style.display = "flex";
-          }
-      function tutup() {
-          document.getElementById("modal").style.display = "none";
-          }
     </script>
+    <script src="js/modalBox.js" charset="utf-8"></script>
 </body>
 </html>
