update hover button dan hover di index

--- a/detail.html
+++ b/detail.html
@@ -63,12 +63,14 @@
                 </div>
 
                 <div class="b"> <!-- gawe deskripsi-->
-                    <h3>Deskripsi</h3   >
-                    <ul>
-                        <li>Di dunia yang penuh makhluk super yang bisa ia kalahkan, Saitama mendambakan untuk menemukan lawan yang layak.</li>
-                        <li>Dia juga kehilangan seluruh rambutnya karena latihan yang ekstensif, jadi dia bosan dan botak. Sangat tragis.</li>
-                        <li>Saitama dapat melumpuhkan siapa saja dan apa pun hanya dengan satu pukulan.</li>
-                    </ul>
+                    <div class="isi-b">
+                        <h3>Deskripsi</h3  >
+                            <ul>
+                                <li>Di dunia yang penuh makhluk super yang bisa ia kalahkan, Saitama mendambakan untuk menemukan lawan yang layak.</li>
+                                <li>Dia juga kehilangan seluruh rambutnya karena latihan yang ekstensif, jadi dia bosan dan botak. Sangat tragis.</li>
+                                <li>Saitama dapat melumpuhkan siapa saja dan apa pun hanya dengan satu pukulan.</li>
+                            </ul>
+                        </div>
                     <div class="btn-banyak">
                         <a href="">Tampilkan lebih banyak</a>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
