--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
     <div class="konten">
         <div class="main-kiri">
             <div class="isi">
-                <div class="atas">
-                    <div class="atas-kiri">
-                        <p class="jud">TRENDING UPDATE</p>
-                    </div>
-                    <div class="atas-kanan">
-                        <a href="terbaru.html">Lihat semua</a>
+                <div class="isi2">
+                    <div class="atas">
+                        <div class="atas-kiri">
+                            <p class="jud">TRENDING UPDATE</p>
+                        </div>
+                        <div class="atas-kanan">
+                            <a href="terbaru.html">Lihat semua</a>
+                        </div>
                     </div>
                 </div>
                 <div class="tengah">
@@ -142,15 +144,16 @@
             <div class="clear"></div>
 
             <div class="isi">
-                <div class="atas">
+                <div class="isi2">
+                    <div class="atas">
                         <div class="atas-kiri">
                             <p class="jud">UPDATE TERBARU</p>
                         </div>
                         <div class="atas-kanan">
                             <a href="terbaru.html">Lihat semua</a>
                         </div>
+                    </div>
                 </div>
-
                     <div class="row">
                         <div class="column">
                             <div class="card">
@@ -223,6 +226,30 @@
                                     </div>
                             </div>
                     </div>
+                    <div class="row">
+                            <div class="column">
+                                <div class="card">
+                                    <a href="">
+                                        <img src="img/dalang pelo77.jpg" alt="cover" sizes="20%" >
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <div class="card">
+                                    <a href=""><p class="judul">Dalang Pelo</p></a>
+                                </div>
+                            </div>
+                            <div class="column">
+                                <div class="card">
+                                    <a href=""><p class="episode">Episode 17</p></a>
+                                </div>
+                            </div>
+                            <div class="column">
+                                    <div class="card">
+                                        <p>11 menit yang lalu</p>
+                                    </div>
+                            </div>
+                    </div>
             </div>
         </div>
 
@@ -230,17 +257,19 @@
 
             <div class="sidebar">
                 <div class="kanan1">
-                    <div class="atas">
-                         <p class="jud">Cari Menurut Genre</p>
-                    </div>
-                    <div class="is">
-                        <ul>
-                            <li><a href="">Aksi</a></li>
-                            <li><a href="">Drama</a></li>
-                            <li><a href="">Horor</a></li>
-                            <li><a href="">Komedi</a></li>
-                            <li><a href="">Petualangan</a></li>
-                        </ul>
+                    <div class="isi-kanan1">
+                        <div class="atas">
+                            <p class="jud">Cari Menurut Genre</p>
+                        </div>
+                        <div class="is">
+                            <ul>
+                                <li><a href="">Aksi</a></li>
+                                <li><a href="">Drama</a></li>
+                                <li><a href="">Horor</a></li>
+                                <li><a href="">Komedi</a></li>
+                                <li><a href="">Petualangan</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="btn-banyak">
                         <a href="">Tampilkan lebih banyak</a>
