--- a/terbaru.html
+++ b/terbaru.html
@@ -100,7 +100,7 @@
                                         <p>11 menit yang lalu</p>
                                     </div>
                             </div>
-                    </div> 
+                    </div>
             </div>
             <div class="btn-banyak">
                 <a href="">Tampilkan lebih banyak</a>
@@ -109,37 +109,18 @@
         </div>
 
 <!-- FOOTER -->
-<div class="clear"></div>
-<footer>
- <div>
-     <a href="tentangKami.html">Tentang Kami</a>
-     <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
-     <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
- </div>
- <div>
-     <p>© 2019</p>
- </div>
-</footer>
+    <div class="clear"></div>
+    <footer>
+     <div>
+         <a href="tentangKami.html">Tentang Kami</a>
+         <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
+         <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
+     </div>
+     <div>
+         <p>© 2019</p>
+     </div>
+    </footer>
 
-<script>
-var x = document.getElementById("bar");
-var y = document.getElementById("find");
-function bar() {
-if (x.style.display === "none") {
-  x.style.display = "block";
-  y.style.display = "none";
-} else {
-  x.style.display = "none";
-}
-}
-function find() {
-  if (y.style.display === "none") {
-    y.style.display = "block";
-    x.style.display = "none";
-  } else {
-    y.style.display = "none";
-  }
- }
-</script>
-</body>
+    <script src="js/navbar.js"></script>
+  </body>
 </html>
