--- a/semua.html
+++ b/semua.html
@@ -140,6 +140,17 @@
                             </a>
                         </div>
                     </div>
+                    <div class="cover1">
+                            <div>
+                                <a href="detail.html">
+                                    <img src="img/si juki-keroyokan118.jpg" alt="cover" >
+                                    <div>
+                                        <p class="judul">Si Juki</p>
+                                        <p class="episode">Episode 178</p>
+                                    </div>
+                                </a>
+                            </div>
+                    </div>
                     <div class="clear"></div>
                 </div>
                 <div class="btn-banyak">
