edit halaman tamabahan

--- a/index-masuk.html
+++ b/index-masuk.html
@@ -31,9 +31,9 @@
                     <li> <input class="respon" type="text" placeholder="Cari"> </li>
 
                     <ul id="dropdown"style="display:none">
-                      <li ><a href="" class="biru">akun@gmail.com</a></li> <br>
-                      <li onclick="verif();"><a class="green kecil"href="javascript:void(0);">Belum terverifikasi</a></li> <br>
-                      <li class="garis" onclick="uang();"><a  href="javascript:void(0);">Rp. 1000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
+                      <li ><a href="" class="biru kecil">akun@gmail.com</a></li> <br>
+                      <li onclick="verif();"><a class="hijau kecil" href="javascript:void(0);">Belum terverifikasi</a></li> <br>
+                      <li class="garis" onclick="uang();"><a class="kecil"  href="javascript:void(0);">Rp. 1000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
                       <li><a href="" style="color:black; cursor:default;">komik</a></li> <br>
                       <li><a class="abu"href="komikSaya.html">komik saya</a></li> <br>
                       <li><a class="abu"href="komikTerbeli.html">koleksi terbeli</a></li> <br>
