--- a/komikTerbeli.html
+++ b/komikTerbeli.html
@@ -31,10 +31,10 @@
                     <li> <input class="respon" type="text" placeholder="Cari"> </li>
 
                     <ul id="dropdown"style="display:none">
-                      <li><a href="">akun@gmail.com</a></li> <br>
-                      <li onclick="verif();"><a class="biru"href="javascript:void(0);">Belum terverifikasi</a></li> <br>
-                      <li class="garis" onclick="uang();"><a style="color:black;d" href="javascript:void(0);">Rp. 1000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
-                      <li><a href="">komik</a></li> <br>
+                      <li ><a href="" class="biru kecil">akun@gmail.com</a></li> <br>
+                      <li onclick="verif();"><a class="hijau kecil" href="javascript:void(0);">Belum terverifikasi</a></li> <br>
+                      <li class="garis" onclick="uang();"><a class="kecil"  href="javascript:void(0);">Rp. 1000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
+                      <li><a href="" style="color:black; cursor:default;">komik</a></li> <br>
                       <li><a class="abu"href="komikSaya.html">komik saya</a></li> <br>
                       <li><a class="abu"href="komikTerbeli.html">koleksi terbeli</a></li> <br>
                       <li class="garis" onclick="tambahKomik();"><a href="javascript:void(0);" class="abu"  >tambah komik</a></li> <br>
@@ -114,7 +114,7 @@
 
         <!-- KONTEN -->
 
-            <div class="konten">
+            <div class="konten" onclick="closeDrop();">
                 <h3>Komik Terbeli</h3>
                     <div class="atas">
                     <p>Urut berdasarkan</p>
