--- a/komikSaya.html
+++ b/komikSaya.html
@@ -212,6 +212,17 @@
                             </a>
                         </div>
                     </div>
+                    <div class="cover1">
+                        <div>
+                            <a href="">
+                                <img src="img/si nopal118.jpg" alt="cover" >
+                                <div>
+                                    <p class="judul">Si Nopal</p>
+                                    <p class="episode">Episode 178</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                     <div class="clear"></div>
                 </div>
                 <div class="btn-banyak">
