--- a/prototype/index.html
+++ b/prototype/index.html
@@ -24,6 +24,8 @@
     <img src="mockup pweb/Tentang Kami Web.png" alt="">
     <p>Terbaru Web</p>
     <img src="mockup pweb/Terbaru Web.png" alt="">
+    <p>Detail</p>
+    <img src="mockup pweb/Detail Komik Web.png" alt="">
 
   </div>
   <div class="mob">
