--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
                 </div>
                 <div class="tengah">
                     <div class="cover1">
-                        <div>
                             <a href="detail.html">
                                 <img src="img/si abi142.jpg" alt="cover" >
                                 <div>
@@ -73,21 +72,17 @@
                                     <p class="episode">Episode 222</p>
                                 </div>
                             </a>
-                        </div>
                     </div>
                     <div class="cover1">
-                        <div>
                             <a href="detail.html">
-                                <img src="img/si juki- cari kerja142.jpg" alt="cover" >
+                                <img src="img/si juki-keroyokan142.jpg" alt="cover" >
                                 <div>
                                     <p class="judul">Si Juki</p>
                                     <p class="episode">Episode 179</p>
                                 </div>
                             </a>
-                        </div>
                     </div>
                     <div class="cover1">
-                        <div>
                             <a href="detail.html">
                                 <img src="img/si nopal142.jpg" alt="cover" >
                                 <div>
@@ -95,10 +90,8 @@
                                     <p class="episode">Episode 179</p>
                                 </div>
                             </a>
-                        </div>
                     </div>
                     <div class="cover1">
-                        <div>
                             <a href="detail.html">
                                 <img src="img/garudayana142.jpg" alt="cover" >
                                 <div>
@@ -106,10 +99,8 @@
                                     <p class="episode">Episode 19</p>
                                 </div>
                             </a>
-                        </div>
                     </div>
                     <div class="cover1">
-                        <div>
                             <a href="detail.html">
                                 <img src="img/dalang pelo142.jpg" alt="cover" >
                                 <div>
@@ -117,10 +108,8 @@
                                     <p class="episode">Episode 17</p>
                                 </div>
                             </a>
-                        </div>
                     </div>
                     <div class="cover1">
-                        <div>
                             <a href="detail.html">
                                 <img src="img/garudayana142.jpg" alt="cover" >
                                 <div>
@@ -128,10 +117,8 @@
                                     <p class="episode">Episode 19</p>
                                 </div>
                             </a>
-                        </div>
                     </div>
                     <div class="cover1">
-                        <div>
                             <a href="detail.html">
                                 <img src="img/dalang pelo142.jpg" alt="cover" >
                                 <div>
@@ -139,7 +126,6 @@
                                     <p class="episode">Episode 17</p>
                                 </div>
                             </a>
-                        </div>
                     </div>
                 </div>
 
@@ -166,7 +152,7 @@
                         <div class="column">
                             <div class="card">
                                 <a href="detail.html">
-                                    <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
+                                    <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="" >
                                 </a>
                             </div>
                         </div>
@@ -182,7 +168,7 @@
                         </div>
                         <div class="column">
                                 <div class="card">
-                                    <p>1 menit yang lalu</p>
+                                    <p>9 menit yang lalu</p>
                                 </div>
                             </div>
                     </div>
@@ -190,7 +176,7 @@
                             <div class="column">
                                 <div class="card">
                                     <a href="">
-                                        <img src="img/garudayana77.jpg" alt="cover" sizes="20%" >
+                                        <img src="img/garudayana77.jpg" alt="cover" sizes="" >
                                     </a>
                                 </div>
                             </div>
@@ -214,7 +200,7 @@
                             <div class="column">
                                 <div class="card">
                                     <a href="">
-                                        <img src="img/dalang pelo77.jpg" alt="cover" sizes="20%" >
+                                        <img src="img/dalang pelo77.jpg" alt="cover" sizes="" >
                                     </a>
                                 </div>
                             </div>
@@ -238,18 +224,18 @@
                             <div class="column">
                                 <div class="card">
                                     <a href="">
-                                        <img src="img/dalang pelo77.jpg" alt="cover" sizes="20%" >
+                                        <img src="img/si nopal77.jpg" alt="cover" sizes="" >
                                     </a>
                                 </div>
                             </div>
                             <div class="column">
                                 <div class="card">
-                                    <a href=""><p class="judul">Dalang Pelo</p></a>
+                                    <a href=""><p class="judul">Si Nopal</p></a>
                                 </div>
                             </div>
                             <div class="column">
                                 <div class="card">
-                                    <a href=""><p class="episode">Episode 17</p></a>
+                                    <a href=""><p class="episode">Episode 179</p></a>
                                 </div>
                             </div>
                             <div class="column">
@@ -298,22 +284,33 @@
                         <div class="kanan2-isi">
                             <div class="num">1.</div>
                             <a href="">
-                                <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="20%" >
+                                <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="" >
                                 <div class="lol">
                                     <p class="judul">Si Juki</p>
                                     <p class="pengarang">Faza Meonk</p>
-                                    <p class="episode">Episode 179</p>
+                                    <p class="episode">Bersambung, 179 Episode</p>
                                 </div>
                             </a>
                         </div>
                         <div class="kanan2-isi">
                             <div class="num">2.</div>
                             <a href="">
-                                <img src="img/si abi77.jpg" alt="cover" sizes="20%" >
+                                <img src="img/si abi77.jpg" alt="cover" sizes="" >
                                 <div class="lol">
                                     <p class="judul">Si Abi</p>
                                     <p class="pengarang">Anone</p>
-                                    <p class="episode">Episode 222</p>
+                                    <p class="episode">Bersambung, 222 Episode</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="kanan2-isi">
+                            <div class="num">3.</div>
+                            <a href="">
+                                <img src="img/garudayana77.jpg" alt="cover" sizes="" >
+                                <div class="lol">
+                                    <p class="judul">Gundayana</p>
+                                    <p class="pengarang">Anone</p>
+                                    <p class="episode">Bersambung, 19 Episode</p>
                                 </div>
                             </a>
                         </div>
