perbaiki remah - remah
dukungan pelanggan, navbar, dan semuaya dah.. ;v

--- a/dukunganPelanggan.html
+++ b/dukunganPelanggan.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="cssdukunganPelanggan.css">
+    <link rel="stylesheet" href="css/dukunganPelanggan.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BACA KOMIK</title>
@@ -32,7 +32,7 @@
             <div class="kanan">
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
-                    <li> <input class="respon" type="text" placeholder="Cari"> </li>
+                    <li> <input class="respon" type="text" placeholder="   Cari"> </li>
                     <a  href="masuk.html"> MASUK</a>
             </div>
             <div class="clear"></div>
@@ -42,7 +42,7 @@
               <a class="respon" href="terbaru.html">TERBARU</a>
             </div>
             <div id="find" style="display:none;"  class="bar">
-              <input class="respon" type="text" placeholder="Cari">
+              <input class="respon" type="text" placeholder="   Cari">
             </div>
             </ul>
         </nav>
@@ -50,13 +50,15 @@
         <!-- KONTEN -->
 
     <div class="konten">
-      <h1>Dukungan Pelanggan: kritik, saran, masukan dan pertanyaan</h1>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
+      <h1>Dukungan Pelanggan: kritik, saran, masukan dan pertanyaan...</h1>
+      <br>
+      <form action="">
+        <input type="email" placeholder="   masukan Email"><br>
+        <br>
+        <textarea name="name" placeholder="kritik, saran, masukan dan pertanyaan"></textarea>
 
+        <br><button type="button" name="button">kirim</button>
+      </form>
     </div>
     <!-- FOOTER -->
 <div class="clear"></div>
