--- a/ketentuanLayanan.html
+++ b/ketentuanLayanan.html
@@ -32,7 +32,7 @@
             <div class="kanan">
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
-                    <li> <input class="respon" type="text" placeholder="Cari"> </li>
+                    <li> <input class="respon" type="text" placeholder="   Cari"> </li>
                     <a  href="masuk.html"> MASUK</a>
             </div>
             <div class="clear"></div>
@@ -42,7 +42,7 @@
               <a class="respon" href="terbaru.html">TERBARU</a>
             </div>
             <div id="find" style="display:none;"  class="bar">
-              <input class="respon" type="text" placeholder="Cari">
+              <input class="respon" type="text" placeholder="   Cari">
             </div>
             </ul>
         </nav>
@@ -51,12 +51,30 @@
 
     <div class="konten">
       <h1>Ketentuan Layanan</h1>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
-      <p>&nbps &nbps &nbps &nbps Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem cum, sit nisi, illum inventore eos quasi quis dicta perferendis voluptate tempore cumque perspiciatis modi similique in ipsa, provident sint. Assumenda, ipsum natus ex quo vitae. Incidunt necessitatibus pariatur omnis eos, nulla, dolor unde iste enim. Repellendus deleniti blanditiis qui aliquam.</p>
+      <strong>Tanggung Jawab Pengguna</strong> <br>
+      <p>Pengguna secara personal bertanggung jawab atas penggunaan Situs dan/atau Layanan.</p>
+      <p>Pengguna menggunakan Situs dan/atau Layanan atas risikonya sendiri.</p>
+      <p>Pengguna harus menggunakan Layanan sesuai dengan hukum yang berlaku di Republik Indonesia.</p>
+      <p>Pengguna tidak boleh menyediakan informasi yang termasuk di dalamnya:</p>
+      <ol style="margin-left:30px;">
+        <li>Menyalahi HAKI (Hak Atas Kekayaan Intelektual) oleh pihak ketiga, termasuk hak cipta, paten, desain, rahasia perusahaan, hak atas privasi atau publisitas atau jenis hak cipta lainnya yang dimiliki oleh pihak ketiga, atau konten di mana Anda tidak memiliki hak untuk disebarluaskan;
+    Atau konten yang memiliki implikasi hukum termasuk namun tidak terbatas pada produk yang mengandung pernyataan hujatan; atau
+    Menyalahi, atau ilegal di bawah hukum, statuta, aturan atau regulasi.</li>
+        <li>Melanggar hukum, merugikan, mengancam, menyalahgunakan, menghina, menghujat, bersifat jahat, mengganggu privasi orang lain, atau juga membuat tidak nyaman bagi kaum minor dalam berbagai cara;</li>
+        <li>Berisi pornografi, atau menggambarkan manusia sedang melakukan tindakan seksual;</li>
+        <li>Menghina, merendahkan, mengintimidasi, atau berisi kebencian atas individu atau grup berbasis SARA, jenis kelamin, orientasi seksual, atau juga infabilitas.</li>
+        <li>Meniru orang lain atau pihak lain, termasuk namun tidak terbatas pada, pegawai Perusahaan, atau secara salah menyatakan atau salah merepresentasikan afiliasi Pengguna;</li>
+        <li>Dalam memasukkan konten, kontent tersebut menyisipkan "marketing afiliasi", "kode referal", "email sampah", "spam", "surat berantai", "skema piramid", atau metode iklan yang tidak wajar dan mengganggu lainnya;</li>
+        <li>Mengandung peranti lunak yang bervirus atau kode, data, dan program yang didesain untuk merusak dan membatasi fungsi dari komputer atau peranti keras lainnya;</li>
+        <li>Memberikan email yang menyesatkan, atau penipuan di judul dan juga bersifat memanipulasi pengirim untuk menyembunyikan isi sebenarnya yang diberikan melalui Situs.</li>
+      </ol>
 
+      <p>Perusahaan berhak untuk menghapus apapun yang dianggap menyalahi aturan di atas.</p>
+      <p>Pengguna bertanggung jawab atas akurasi yang disebutkan pada informasi.</p> <br>
+
+      <strong>Akun</strong>
+      <p>Untuk mengakses Situs, Pengguna perlu untuk menyediakan informasi yang terkini, akurat, detil kontak, dan lainnya ('Informasi Pengguna') sebagai bagian dari proses pendaftaran akun dan/atau penggunaan berkelanjutan dari Situs yang ditawarkan Perusaahan dan yang berkaitan. Informasi Pengguna mengacu pada informasi yang disediakan oleh Pengguna kepada Perusahaan atau kepada Pengguna lain. Lebih jauh lagi, akun Pengguna dan ID Pengguna tidak akan diserahkan atau dijual ke pihak lain.</p>
+      <p>Pengguna bertanggung jawab untuk menjaga kerahasiaan dari akun Pengguna serta kata kunci (password) yang dimiliki. Pengguna juga menerima untuk bertanggung jawab atas segala aktivitas yang dilakukan dari akun Pengguna.</p>
     </div>
     <!-- FOOTER -->
 <div class="clear"></div>
