--- a/tentangKami.html
+++ b/tentangKami.html
@@ -32,7 +32,7 @@
             <div class="kanan">
                     <li><a href="javascript:void(0);" class="icon" onclick="find()"> <i class="fa fa-search" aria-hidden="true"></i> </a>
                     </li>
-                    <li> <input class="respon" type="text" placeholder="Cari"> </li>
+                    <li> <input class="respon" type="text" placeholder="   Cari"> </li>
                     <a  href="masuk.html"> MASUK</a>
             </div>
             <div class="clear"></div>
@@ -42,7 +42,7 @@
               <a class="respon" href="terbaru.html">TERBARU</a>
             </div>
             <div id="find" style="display:none;"  class="bar">
-              <input class="respon" type="text" placeholder="Cari">
+              <input class="respon" type="text" placeholder="   Cari">
             </div>
             </ul>
         </nav>
@@ -55,14 +55,15 @@
 
       <br>
       <p>tujuan dibuat web baca komik ini ialah untuk :</p>
-      <ol>
+      <ol style="margin-left:30px;">
         <li>menyediakan wadah bagi setiap orang yang ingin membuat komik untuk dapat ditayangkan dan dijual secara legal dan mudah.</li>
         <li>menyediakan pelayanan untuk menjadi wadah pembacaan komik yang legal dan berkualitas.</li>
         <li>meningkatkan konten perkomikan di Indonesia agar lebih baik lagi.</li>
         <li>meningkatkan tingkat pendapatan para komikus di Indonesia.</li>
       </ol>
+      <br>
+      <q>Visi Baca Komik adalah untuk meningkatkan tingkat kepuasan para pecinta komik di Indonesia terhadap karya -karya yang berjiwa ke Indonesiaan. Tingkat kepuasan ini berkaitan erat dengan kebahagiaannya sebagai individu.</q>
 
-      <p>Visi Baca Komik adalah untuk meningkatkan tingkat kepuasan para pecinta komik di Indonesia terhadap karya -karya yang berjiwa ke Indonesiaan. Tingkat kepuasan ini berkaitan erat dengan kebahagiaannya sebagai individu.</p>
 
     </div>
     <!-- FOOTER -->
