--- a/index-masuk.html
+++ b/index-masuk.html
@@ -37,15 +37,15 @@
                     <li> <input class="respon" type="text" placeholder="   Cari"> </li>
 
                 <ul id="dropdown"style="display:none">
-                    <li ><a href="" class="biru kecil">akun@gmail.com</a></li> <br>
-                    <li onclick="verif();"><a class="hijau kecil" href="javascript:void(0);">Belum terverifikasi</a></li> <br>
-                    <li class="garis" onclick="uang();"><a class="kecil"  href="javascript:void(0);">Rp. 1000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
+                    <li ><a href="" class="biru size18">akun@gmail.com</a></li> <br>
+                    <li onclick="verif();"><a class="hijau size14" href="javascript:void(0);">Belum terverifikasi</a></li> <br>
+                    <li class="garis" onclick="uang();"><a class="size14"  href="javascript:void(0);">Rp. 1,000,000 <i class="fa fa-plus-square" aria-hidden="true"></i></a></li><br>
                     <li><a href="" style="color:black; cursor:default;">komik</a></li> <br>
                     <li><a class="abu"href="komikSaya.html">komik saya</a></li> <br>
                     <li><a class="abu"href="komikTerbeli.html">koleksi terbeli</a></li> <br>
                     <li class="garis" onclick="tambahKomik();"><a href="javascript:void(0);" class="abu"  >tambah komik</a></li> <br>
                     <li class="garis" onclick="profil();"><a href="javascript:void(0);">Edit Profil</a></li> <br>
-                    <li><a style="color:rgba(255,0,0,0.5);"href="index.html">Logout</a></li>
+                    <li><a class="merah"href="index.html">Logout</a></li>
                 </ul>
             </div>
             <div class="clear"></div>
