ganti gmbr slider

--- a/detail.html
+++ b/detail.html
@@ -63,8 +63,8 @@
                         <div class="dul">
                             <p>Si Juki</p>
                         </div> <!-- gawe judul komik dll -->
-                        <div class="par"><p>Yusuke Murata, ONE</p><!-- penulis -->
-                            <p>Bersambung | 147 Episode</p><!-- ongoing --></div>
+                        <div class="par"><p>Faza Meonk</p><!-- penulis -->
+                            <p>Bersambung | 179 Episode</p><!-- ongoing --></div>
                         <a href="">Beli</a>
                     </div>
                 </div>
@@ -87,22 +87,22 @@
                 <div class="c"> <!-- gawe tulisan chapter e-->
                     <h3>Episode</h3>
                     <div class="cc">
-                        <p>Episode 147</p>
+                        <p>Episode 179</p>
+                        <p>|</p>
+                        <P>Keroyokan</P>
+                    </div>
+                    <div class="cc">
+                        <p>Episode 178</p>
+                        <p>|</p>
+                        <P>Cari kerja</P>
+                    </div>
+                    <div class="cc">
+                        <p>Episode 176</p>
                         <p>|</p>
                         <P>Kemenangan</P>
                     </div>
                     <div class="cc">
-                        <p>Episode 146</p>
-                        <p>|</p>
-                        <P>Kemenangan</P>
-                    </div>
-                    <div class="cc">
-                        <p>Episode 145</p>
-                        <p>|</p>
-                        <P>Kemenangan</P>
-                    </div>
-                    <div class="cc">
-                        <p>Episode 144</p>
+                        <p>Episode 176</p>
                         <p>|</p>
                         <P>Kemenangan</P>
                     </div>
