--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <div isi2>
                         <div class="kanan2-isi">
                             <div class="num">1.</div>
-                            <a href="">
+                            <a href="detail.html">
                                 <img src="img/si juki-keroyokan77.jpg" alt="cover" sizes="" >
                                 <div class="lol">
                                     <p class="judul">Si Juki</p>
