update agak responsive detail.html

--- a/detail.html
+++ b/detail.html
@@ -64,7 +64,8 @@
                             <p>Si Juki</p>
                         </div> <!-- gawe judul komik dll -->
                         <div class="par"><p>Faza Meonk</p><!-- penulis -->
-                            <p>Bersambung | 179 Episode</p><!-- ongoing --></div>
+                            <p>Bersambung | 179 Episode</p><!-- ongoing -->
+                        </div>
                         <a href="">Beli</a>
                     </div>
                 </div>
