--- a/dukunganPelanggan.html
+++ b/dukunganPelanggan.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/dukunganPelanggan.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>BACA KOMIK</title>
@@ -50,7 +51,7 @@
         <!-- KONTEN -->
 
     <div class="konten">
-      <h1>Dukungan Pelanggan: kritik, saran, masukan dan pertanyaan...</h1>
+      <p>Dukungan Pelanggan: kritik, saran, masukan dan pertanyaan...</p>
       <br>
       <form action="">
         <input type="email" placeholder="   masukan Email"><br>
