--- a/tentangKami.html
+++ b/tentangKami.html
@@ -62,7 +62,7 @@
         <li>meningkatkan tingkat pendapatan para komikus di Indonesia.</li>
       </ol>
       <br>
-      <q>Visi Baca Komik adalah untuk meningkatkan tingkat kepuasan para pecinta komik di Indonesia terhadap karya -karya yang berjiwa ke Indonesiaan. Tingkat kepuasan ini berkaitan erat dengan kebahagiaannya sebagai individu.</q>
+      <p>"Visi Baca Komik adalah untuk meningkatkan tingkat kepuasan para pecinta komik di Indonesia terhadap karya -karya yang berjiwa ke Indonesiaan. Tingkat kepuasan ini berkaitan erat dengan kebahagiaannya sebagai individu."</p>
 
 
     </div>
