tambah loading gan.. mantul

--- a/index.html
+++ b/index.html
@@ -320,8 +320,13 @@
             </div>
         <div class="clear"></div>
     </div>
-    <!-- FOOTER -->
 
+    <!-- loader -->
+    <div id="loading">
+      <p></p>
+    </div>
+
+    <!-- FOOTER -->
     <footer>
         <div>
             <a href="tentangKami.html">Tentang Kami</a>
@@ -335,5 +340,6 @@
 
     <script src="js/navbar.js"></script>
     <script src="js/slider.js"></script>
+    <script src="js/loading.js" charset="utf-8"></script>
   </body>
 </html>
