--- a/index.html
+++ b/index.html
@@ -322,9 +322,6 @@
     </div>
 
     <!-- loader -->
-    <div id="loading">
-      <p></p>
-    </div>
 
     <!-- FOOTER -->
     <footer>
@@ -338,8 +335,11 @@
         </div>
     </footer>
 
+    <div id="loading">
+      <p></p>
+    </div>
+    <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/slider.js"></script>
-    <script src="js/loading.js" charset="utf-8"></script>
   </body>
 </html>
