sebarkan loading gan

--- a/detail.html
+++ b/detail.html
@@ -184,7 +184,10 @@
          <p>© 2019</p>
      </div>
  </footer>
-
+ <div id="loading">
+   <p></p>
+ </div>
+ <script src="js/loading.js"></script>
  <script src="js/navbar.js"></script>
 </body>
 </html>
