--- a/index-masuk.html
+++ b/index-masuk.html
@@ -406,7 +406,11 @@
             <p>© 2019</p>
         </div>
     </footer>
-
+    <div id="loading">
+      <p></p>
+    </div>
+    
+    <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/modalBox.js"></script>
     <script src="js/slider.js"></script>
