--- a/komikSaya.html
+++ b/komikSaya.html
@@ -232,10 +232,6 @@
                     </div>
                     <div class="clear"></div>
                 </div>
-                <div class="btn-banyak">
-                    <a href="">Tampilkan lebih banyak</a>
-                    <i class="fa fa-caret-down" aria-hidden="true"></i>
-                </div>
                 <div class="clear"></div>
             </div>
 
@@ -251,7 +247,11 @@
          <p>© 2019</p>
      </div>
  </footer>
+ <div id="loading">
+   <p></p>
+ </div>
 
+ <script src="js/loading.js"></script>
  <script src="js/navbar.js"></script>
  <script src="js/modalBox.js" charset="utf-8"></script>
 </body>
