--- a/masuk.html
+++ b/masuk.html
@@ -63,18 +63,22 @@
     </div>
 
 <!-- footer -->
-<footer>
-    <div>
-        <a href="tentangKami.html">Tentang Kami</a>
-        <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
-        <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
-    </div>
-    <div>
-        <p>© 2019</p>
-    </div>
-</footer>
+  <footer>
+      <div>
+          <a href="tentangKami.html">Tentang Kami</a>
+          <a href="ketentuanLayanan.html">Ketentuan Layanan</a>
+          <a href="dukunganPelanggan.html">Dukungan Pelanggan</a>
+      </div>
+      <div>
+          <p>© 2019</p>
+      </div>
+  </footer>
+  <div id="loading">
+    <p></p>
+  </div>
 
-    <script src="js/navbar.js"></script>
-    <script src="js\validasi_masuk.js"></script>
+  <script src="js/loading.js"></script>
+  <script src="js/navbar.js"></script>
+  <script src="js\validasi_masuk.js"></script>
 </body>
 </html>
