--- a/daftar1.html
+++ b/daftar1.html
@@ -70,6 +70,10 @@
         </div>
     </footer>
 
+    <div id="loading">
+      <p></p>
+    </div>
+    <script src="js/loading.js"></script>
     <script src="js\validsai_daftar1.js"></script>
     <script src="js/navbar.js"></script>
   </body>
