--- a/daftar2.html
+++ b/daftar2.html
@@ -74,7 +74,11 @@
             <p>© 2019</p>
         </div>
     </footer>
-
+    <div id="loading">
+      <p></p>
+    </div>
+    
+    <script src="js/loading.js"></script>
     <script src="js/validasi_daftar2.js" charset="utf-8"></script>
     <script src="js/navbar.js"></script>
 </body>
