--- a/dukunganPelanggan.html
+++ b/dukunganPelanggan.html
@@ -73,7 +73,11 @@
             <p>© 2019</p>
         </div>
     </footer>
-
+    <div id="loading">
+      <p></p>
+    </div>
+    
+    <script src="js/loading.js"></script>
     <script src="js/navbar.js"></script>
 </body>
 </html>
