fix kecoa terbang

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     </div>
                 </div>
 
-                <div class="kiri_panah" onclick="kiri_klik();"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
-                <div class="kanan_panah" onclick="kanan_klik();"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
+                <div class="kiri_panah" onclick="kiri_klik();" ><i class="fa fa-chevron-right" aria-hidden="true" ></i></div>
+                <div class="kanan_panah" onclick="kanan_klik();"><i class="fa fa-chevron-right" aria-hidden="true" i></i></div>
 
                 <div class="clear"></div>
             </div>
